--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  dio: ^5.5.0
+  flutter_riverpod: ^2.5.1
+
 
 flutter:
   uses-material-design: true
