--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
     sdk: flutter
   http: ^1.2.2
   intl: ^0.19.0
+  shared_preferences: ^2.3.2
+
 
 dev_dependencies:
   flutter_test:
