--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,13 @@
-org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8
+# Speed & stability
+org.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.caching=true
+
+# Kotlin/AGP stability
+kotlin.code.style=official
 android.useAndroidX=true
 android.enableJetifier=true
-kotlin.code.style=official
+
+# (Temporary workaround if caches keep corrupting; remove later)
+kotlin.incremental=true
