--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.2.2
+  supabase_flutter: ^2.10.0
   intl: ^0.19.0
   shared_preferences: ^2.3.2
 
