--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,13 +1,22 @@
-# Speed & stability
+# Memory & stability
 org.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8
 org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.caching=true
 
-# Kotlin/AGP stability
-kotlin.code.style=official
+# Android/Kotlin/Flutter toggles
 android.useAndroidX=true
 android.enableJetifier=true
+kotlin.code.style=official
 
-# (Temporary workaround if caches keep corrupting; remove later)
-kotlin.incremental=true
+# Helpful for modern resource shrinking & smaller classpaths
+android.nonTransitiveRClass=true
+
+# Keep your host app module name explicit
+flutter.hostAppProjectName=app
+
+# Suppress compilation warnings for newer SDK versions
+android.suppressUnsupportedCompileSdk=33
+
+# Use system OpenJDK 17 instead of Android Studio's JBR
+org.gradle.java.home=C:/Program Files/Eclipse Adoptium/jdk-17.0.16.8-hotspot
