--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   cupertino_icons: ^1.0.6
   firebase_core: ^3.4.0
   firebase_auth: ^5.2.0
@@ -19,6 +18,7 @@ dependencies:
   supabase_flutter: ^2.5.6
   intl: ^0.19.0
   shared_preferences: ^2.2.2
+  file_picker: ^8.0.3
 
 dev_dependencies:
   flutter_test:
